feat: add dialog component

--- a/src/shared/style/mixins/hairline.less
+++ b/src/shared/style/mixins/hairline.less
@@ -34,7 +34,7 @@
   transform: scaleY(0.5);
 }
 
-.hairline-right(@color: @border-color, @width: 1px) {
+.hairline-left(@color: @border-color, @width: 1px) {
   .hairline-common();
   top: 0;
   left: 0;
