--- a/src/action-sheet/action-sheet.less
+++ b/src/action-sheet/action-sheet.less
@@ -90,4 +90,44 @@
   &__item-icon {
     font-size: @action-sheet-item-icon-size !important;
   }
+
+  &-group {
+    border-radius: @action-sheet-border-radius;
+    overflow: hidden;
+    background-color: @action-sheet-item-bg-color;
+  }
+
+  &__item,
+  &__cancel {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: @spacer-xs;
+    box-sizing: border-box;
+    white-space: nowrap;
+    outline: none;
+    margin: 0;
+    border-radius: 0;
+    padding: 0 @action-sheet-item-padding-inline;
+    height: @action-sheet-item-height;
+    font-size: @action-sheet-item-font-size;
+    color: @action-sheet-item-color;
+    background-color: transparent;
+
+    &::after {
+      display: none;
+    }
+
+    &--disabled {
+      opacity: @action-sheet-item-disabled-opacity;
+    }
+
+    &--active {
+      background-color: @action-sheet-item-bg-color-active;
+    }
+  }
+
+  &__item-icon {
+    font-size: 1.2em !important;
+  }
 }
