--- a/example/miniprogram/pages/index/index.wxml
+++ b/example/miniprogram/pages/index/index.wxml
@@ -16,7 +16,8 @@
     <k-cell title="Dialog 对话框" url="/pages/dialog/dialog" arrow clickable />
     <k-cell title="Loading 加载" url="/pages/loading/loading" arrow clickable />
     <k-cell title="Overlay 遮罩层" url="/pages/overlay/overlay" arrow clickable />
-    <k-cell title="Popup 弹出层" url="/pages/popup/popup" arrow clickable border="{{ false }}" />
+    <k-cell title="Popup 弹出层" url="/pages/popup/popup" arrow clickable />
+    <k-cell title="Toast 轻提示" url="/pages/toast/toast" arrow clickable border="{{ false }}" />
   </k-cell-group>
 
   <k-cell-group title="动画" variant="card">
