--- a/example/miniprogram/pages/index/index.wxml
+++ b/example/miniprogram/pages/index/index.wxml
@@ -15,6 +15,7 @@
   <k-cell-group title="反馈组件" variant="card">
     <k-cell title="ActionSheet 动作面板" url="/pages/action-sheet/action-sheet" arrow clickable />
     <k-cell title="Dialog 对话框" url="/pages/dialog/dialog" arrow clickable />
+    <k-cell title="DropdownMenu 下拉菜单" url="/pages/dropdown-menu/dropdown-menu" arrow clickable />
     <k-cell title="Overlay 遮罩层" url="/pages/overlay/overlay" arrow clickable />
     <k-cell title="Popup 弹出层" url="/pages/popup/popup" arrow clickable />
     <k-cell title="Toast 轻提示" url="/pages/toast/toast" arrow clickable border="{{ false }}" />
