--- a/src/shared/style/variables.less
+++ b/src/shared/style/variables.less
@@ -114,6 +114,26 @@
 @dark-color: var(--k-dark-color, #000000);
 @disabled-opacity: var(--k-disabled-opacity, 0.5);
 
+// Shadow
+@shadow-md: var(
+  --k-shadow-md,
+  0px 0px 5px 0px rgba(0, 0, 0, 0.02),
+  0px 2px 10px 0px rgba(0, 0, 0, 0.04),
+  0px 0px 1px 0px rgba(0, 0, 0, 0.03)
+);
+@shadow-lg: var(
+  --k-shadow-lg,
+  0px 0px 15px 0px rgba(0, 0, 0, 0.03),
+  0px 2px 30px 0px rgba(0, 0, 0, 0.08),
+  0px 0px 1px 0px rgba(0, 0, 0, 0.03)
+);
+@shadow-xl: var(
+  --k-shadow-xl,
+  0px 0px 30px 0px rgba(0, 0, 0, 0.04),
+  0px 30px 60px 0px rgba(0, 0, 0, 0.12),
+  0px 0px 1px 0px rgba(0, 0, 0, 0.03)
+);
+
 // Spacer
 @spacer-xs: var(--k-spacer-xs, 6px);
 @spacer-s: var(--k-spacer-s, 8px);
