--- a/src/shared/wxs/array.wxs
+++ b/src/shared/wxs/array.wxs
@@ -16,8 +16,17 @@ function includes(array, value) {
   return false;
 }
 
+function forEach(array, callback) {
+  for (var i = 0; i < array.length; i++) {
+    if (callback(array[i], i, array) === false) {
+      break;
+    }
+  }
+}
+
 module.exports = {
   isArray: isArray,
   ensureArray: ensureArray,
   includes: includes,
+  forEach: forEach,
 };
